--- a/templates/example_form.jinja
+++ b/templates/example_form.jinja
@@ -1,17 +1,5 @@
-<html>
-    <head>
-        <script src="/static/node_modules/htmx.org/dist/htmx.min.js"></script>
-        <script src="/static/node_modules/quill/dist/quill.js"></script>
-
-        <link rel="stylesheet" href="/static/custom.css">
-        <link rel="stylesheet" href="/static/node_modules/quill/dist/quill.snow.css">
-
-
-    </head>
-
-    <body>
-
-        <h1>Hello</h1>
+{% include "html_page_header.jinja" %}
+<h1>Hello</h1>
         <form 
             hx-post="/submit/user" 
             hx-target="body" 
@@ -38,13 +26,7 @@
 
             <button type="submit">Go</button>
         </form>
-
-    </body>
-
-
-
-</html>
-
+{% include "html_page_footer.jinja" %}
 
 
 
