--- a/static/custom.css
+++ b/static/custom.css
@@ -1,6 +1,12 @@
+
 body {
   background-color: whitesmoke;
+  width: 100%;
+  padding: 0;
+  margin: 0;
   font-size: 14px;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -25,3 +31,24 @@ input {
     border-radius: 4px;
 }
 
+
+title-bar {
+  width: 100%;
+  height: 96px;
+  margin: 0;
+  padding 16px;
+  background-color: rgb(69, 98, 151);
+  color: navy;
+}
+
+footer-bar {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 48px;
+  margin: 0;
+  padding 16px;
+  background-color: rgb(69, 98, 151);
+  color: navy;
+  font-size: small;
+}
