sort standard layout

--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -1,6 +1,7 @@
 {% include "html_page_header.jinja" %}
 <h1>Hello</h1>
 <p>This is the home page</p>
+<a href="/users">Users</a>
 {% include "html_page_footer.jinja" %}
 
 
