--- a/static/custom.css
+++ b/static/custom.css
@@ -1,6 +1,20 @@
 
+/* 
+  Root - variables etc
+*/
+:root {
+  --background-pale: whitesmoke;
+  --background-dark: rgb(69, 98, 151);
+  --text-pale: whitesmoke;
+  --text-dark: rgb(42, 42, 49);
+}
+
+/*
+  Standard tags - No Class
+*/
 body {
-  background-color: whitesmoke;
+  background-color: var(--background-pale);
+  color: var(--text-dark)
   width: 100%;
   padding: 0;
   margin: 0;
@@ -11,7 +25,6 @@ body {
 
 h1 {
   color: navy;
-  margin-left: 20px;
 }
 
 form {
@@ -28,17 +41,29 @@ label {
 }
 
 input {
+    font-size: 12px;
     border-radius: 4px;
 }
 
+
+/*
+  Classes
+*/
+
+
+
+
+/*
+  Custom Tags
+*/
 
 title-bar {
   width: 100%;
   height: 96px;
   margin: 0;
-  padding 16px;
-  background-color: rgb(69, 98, 151);
-  color: navy;
+  padding-left: 16px;
+  background-color: var(--background-dark);
+  color: var(--text-pale);
 }
 
 footer-bar {
@@ -47,8 +72,14 @@ footer-bar {
   width: 100%;
   height: 48px;
   margin: 0;
-  padding 16px;
-  background-color: rgb(69, 98, 151);
-  color: navy;
+  padding-left: 16px;
+  background-color: var(--background-dark);
+  color: var(--text-pale);
   font-size: small;
+}
+
+page-content {
+  display:flex;
+  flex-direction: column;
+  padding: 16px;
 }
